src/test/ui/object-safety/object-safety-sized.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized.rs:14:5
   |
LL | trait Bar : Sized {
   |       ---   ----- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL |     t
   |     ^ the trait `Bar` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Bar>` for `&T`
   = note: required by cast to type `&dyn Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
